# uTranslate

./: LICENSE  README.md  welcome.odg
uTranslate/: CMakeLists.txt  Makefile  controller.js  manifest.json  manifest.json.in  uTranslate.desktop  uTranslate.qml  uTranslate.qmlproject
uTranslate/app/: CMakeLists.txt  DisplayFlags.qml  LangPage.qml  ListModelJson.qml  TranslationPage.qml  controller.js  glosbe_lang.js  glosbe_lang_i18n.js  uTranslate.desktop.in  uTranslate.qml
uTranslate/app/components/: CMakeLists.txt  EmptyState.qml  FastScroll.qml  FlagButton.qml  LangButton.qml  LangSelector.qml  ProgressionIcon.qml  SectionDelegate.qml  TaskProgressBar.qml
uTranslate/app/graphics/: CMakeLists.txt
uTranslate/app/graphics/ext/: CMakeLists.txt
uTranslate/app/graphics/flags-iso/: CMakeLists.txt
uTranslate/app/tests/autopilot/: run
uTranslate/app/tests/autopilot/uTranslate/main/: test_main.py
uTranslate/components/: FlagButton.qml  LangSelector.qml
uTranslate/debian/: changelog  control  copyright  install
uTranslate/po/: en.po  en_EN.po  fr.po  fr_FR.po  sp.po  translate.pot  utranslate.mrenon.pot
uTranslate/tests/autopilot/: run
uTranslate/tests/autopilot/uTranslate/main/: test_main.py
uTranslate/ui/: ConfigurationTab.qml  DefinitionTab.qml  TranslateTab.qml  TranslationPage.qml  TranslationTab.qml  WorldTabTools.qml
